--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,9 +63,9 @@
         }
 
         .contact-card a {
-            color: #0366d6;
             text-decoration: none;
             margin: 0 10px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -84,13 +85,13 @@
 
     <section id="contact-section" class="contact-card">
         <h2>Contact Me</h2>
-        <a href="https://www.linkedin.com/in/abdurrahman-yildiz-508b9620/" target="_blank">
+        <a href="https://www.linkedin.com/in/abdurrahman-yildiz-508b9620/" target="_blank" style="color: #0366d6;">
             <i class="fab fa-linkedin"></i> LinkedIn
         </a>
-        <a href="https://stackoverflow.com/users/2807165/abdurrahmany" target="_blank">
+        <a href="https://stackoverflow.com/users/2807165/abdurrahmany" target="_blank" style="color: #FFA33C;">
             <i class="fab fa-stack-overflow"></i> Stack Overflow
         </a>
-        <a href="https://github.com/abdurrahmanyildiz" target="_blank">
+        <a href="https://github.com/abdurrahmanyildiz" target="_blank" style="color: #222;">
             <i class="fab fa-github"></i> GitHub
         </a>
     </section>
