--- a/index.html
+++ b/index.html
@@ -67,6 +67,32 @@
             margin: 0 10px;
             font-weight: bold;
         }
+
+	     /* Media Queries */
+        @media only screen and (max-width: 600px) {
+            .profile-pic {
+                width: 120px;
+                height: 120px;
+                left: 50%;
+            }
+
+            header {
+                padding: 1em 10px;
+                position: relative;
+            }
+
+            h1, h5 {
+                position: relative;
+                top: 120px;
+            }
+
+            section {
+                top: 120px;
+                padding: 10px;
+                position: relative;
+
+            }
+        }
     </style>
 </head>
 
